--- a/style.css
+++ b/style.css
@@ -1,2 +1,19 @@
     body{
  background-color: brown;
+}
+
+header{
+background-color: blue;
+height: 80px;
+padding-left: 30px;
+margin-left: -30px;
+margin-right: -30px;
+margin-top: -30px;
+text-align: ;
+display:flex
+}
+
+header h3
+font-size: 30px;
+color: within
+}
