--- a/style.css
+++ b/style.css
@@ -1,19 +1,23 @@
-    body{
+ @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+ body{
  background-color: brown;
 }
-
+color: Black
 header{
-background-color: blue;
-height: 80px;
-padding-left: 30px;
-margin-left: -30px;
-margin-right: -30px;
-margin-top: -30px;
-text-align: ;
-display:flex
+padding:10px;
+border-bottom:4px solid :Blank;
+font-size: 25px;
+text-decoration:none;
+display:flex;
+justify-content:space-between;
+align-items: center;
+margin:0 auto;
 }
-
 header h3
+font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  margin:o;;
 font-size: 30px;
 color: within
 }
